feature section added

--- a/index.html
+++ b/index.html
@@ -14,18 +14,79 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title" >Let's make <br> beautiful flowers a <br> part of your life.</h1>
-                <p class="banner-info">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <p class="banner-info">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal distribution of letters.</p>
                 <button class="btn-primary">Shop Now</button>
             </div>
-        <img class="img" src="./Flower Asset/pngwing 6.png" alt="">
+        <img class="img" src="./Flower Asset/pngwing 10.png" alt="">
         </div>
     </header>
-    
+
     <main>
+        <section class="feature">
+            <div class="feature-details">
+                <h2 class="feature-title">
+                    Our Featured Flowers
+                </h2>
+                <p class="feature-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="feature-container">
+                <div class="pink-flower">
+                    <div class="pink">
+                        <img width="70%" height="85%" src="Flower Asset/pngwing 6.png" alt="">
+                    </div>
+                    <p>Pink Flower Tree</p>
+
+                </div>
+                <div class="red-flower">
+                    <div class="red">
+                        <img width="100%" height="100%" src="Flower Asset/pngwing 5.png" alt="">
+                    </div>
+                    <p>red Flower Tree</p>
+
+                </div>
+                <div class="yellow-flower">
+                    <div class="yellow">
+                        <img width="100%" height="100%" src="Flower Asset/pngwing 7.png" alt="">
+                    </div>
+                    <p>yellow Flower Tree</p>
+
+                </div>
+            </div>
+        </section>
+    <section class="middle">
+        <div>
+            <h3 class="middle-title">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h3>
+            <p class="middle-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <button class="btn-primary" id="btn">Sign Up</button>
+        </div>
+        <img src="./Flower Asset/pngwing 8.png" alt="">
+    </section>
+
+    <section>
+    <div class="deals">
+        <h3 class="latest">
+            Get The Latest Deals
+        </h3>
+        <p class="coupon">
+            $30 coupon for first shopping
+        </p>
+        <div class="email">
+            <input type="email" placeholder="Enter your email here" name="" id="email">
+        <button class="btn-primary">Subscribe</button></div>
+        </div>
+    </section>
 
     </main>
 
-    <footer>
+    <footer class="footer">
+        <h3 class="footer-title">
+            Flower<span class="shop">Shop</span>
+        </h3>
+        <p class="footer-description">
+            It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+
+        </p>
+        <small class="small">@2020-2023, FlowerShop.com. All rights reserved. </small>
 
     </footer>
     
