--- a/index.html
+++ b/index.html
@@ -39,27 +39,29 @@
                 </div>
                 <div class="red-flower">
                     <div class="red">
-                        <img width="100%" height="100%" src="Flower Asset/pngwing 5.png" alt="">
+                        <img width="70%" height="70%" src="Flower Asset/pngwing 5.png" alt="">
                     </div>
-                    <p>red Flower Tree</p>
+                    <p>Red Flower Tree</p>
 
                 </div>
                 <div class="yellow-flower">
                     <div class="yellow">
-                        <img width="100%" height="100%" src="Flower Asset/pngwing 7.png" alt="">
+                        <img width="70%" height="85%" src="Flower Asset/pngwing 7.png" alt="">
                     </div>
-                    <p>yellow Flower Tree</p>
+                    <p>Yellow Flower Tree</p>
 
                 </div>
             </div>
         </section>
     <section class="middle">
-        <div>
+        <div class="middle-class">
             <h3 class="middle-title">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h3>
             <p class="middle-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
             <button class="btn-primary" id="btn">Sign Up</button>
         </div>
-        <img src="./Flower Asset/pngwing 8.png" alt="">
+        <div>
+            <img width="100%" src="./Flower Asset/pngwing 8.png" alt="">
+        </div>
     </section>
 
     <section>
@@ -70,7 +72,7 @@
         <p class="coupon">
             $30 coupon for first shopping
         </p>
-        <div class="email">
+        <div class="subscription">
             <input type="email" placeholder="Enter your email here" name="" id="email">
         <button class="btn-primary">Subscribe</button></div>
         </div>
