--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                 <p class="banner-info">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal distribution of letters.</p>
                 <button class="btn-primary">Shop Now</button>
             </div>
+       <div> 
         <img class="img" src="./Flower Asset/pngwing 10.png" alt="">
+    </div>
         </div>
     </header>
 
@@ -62,6 +64,19 @@
         <div>
             <img width="100%" src="./Flower Asset/pngwing 8.png" alt="">
         </div>
+    </section>
+    <section class="instagram">
+        <div class="instagram-section">
+            <h3 class="insta-title">Instagram</h3>
+            <p class="insta-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div>
+        <div class="insta-photo-group">
+            <div class="insta-photo"><img width="100%" src="Flower Asset/Flower 01.png" alt=""></div>
+            <div class="insta-photo"><img width="100%" src="Flower Asset/Rectangle 4.png" alt=""></div>
+            <div class="insta-photo"><img width="100%" src="Flower Asset/Rectangle 5.png" alt=""></div>
+            <div class="insta-photo"><img width="100%" src="Flower Asset/Rectangle 6.png" alt=""></div>
+        </div>
+        
     </section>
 
     <section>
