--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p class="banner-info">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using Lorem Ipsum is <br> that it has a more-or-less normal distribution of letters.</p>
                 <button class="btn-primary">Shop Now</button>
             </div>
-       <div> 
+       <div class="banner-img"> 
         <img class="img" src="./Flower Asset/pngwing 10.png" alt="">
     </div>
         </div>
