--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- this is banner section -->
     <header>
         <div class="banner">
             <div class="banner-content">
@@ -24,6 +25,7 @@
     </header>
 
     <main>
+        <!-- this is feature section -->
         <section class="feature">
             <div class="feature-details">
                 <h2 class="feature-title">
@@ -55,6 +57,7 @@
                 </div>
             </div>
         </section>
+        <!-- This is middle section -->
     <section class="middle">
         <div class="middle-class">
             <h3 class="middle-title">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h3>
@@ -65,6 +68,7 @@
             <img width="100%" src="./Flower Asset/pngwing 8.png" alt="">
         </div>
     </section>
+    <!-- this is instagram section -->
     <section class="instagram">
         <div class="instagram-section">
             <h3 class="insta-title">Instagram</h3>
@@ -79,6 +83,51 @@
         
     </section>
 
+    <!-- This is bonus section -->
+    <section class="expensive">
+        <div class="expensive-title">
+            <h3 class="flowers-title">Some expensive Flowers</h3>
+            <p class="flowers-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+        </div>
+        <div class="expensive-flex">
+            <div class="flowers">
+                <div class="rose">
+                    <img width="100%" src="Flower Asset/rose.jpeg" alt="">
+                </div>
+                <p class="flowers-name">
+                    Black Rose
+                </p>
+            </div>
+            <div class="flowers">
+                <div class="rose">
+                    <img width="100%" src="Flower Asset/Juliet-Rose.jpg" alt="">
+                </div>
+                <p class="flowers-name">
+                    Juliet Rose
+                </p>
+            </div>
+            <div class="flowers">
+                <div class="rose">
+                    <img width="100%" src="Flower Asset/Gloriosa-Lily.jpg" alt="">
+                </div>
+                <p class="flowers-name">
+                    Gloriosa Lily
+                </p>
+            </div>
+            <div class="flowers">
+                <div class="rose">
+                    <img width="100%" src="Flower Asset/Saffron-Crocus.jpg" alt="">
+                </div>
+                <p class="flowers-name">
+                    Saffron Crocus
+                </p>
+            </div>
+
+        </div>
+
+    </section>
+
+<!-- this is offer section -->
     <section>
     <div class="deals">
         <h3 class="latest">
@@ -95,6 +144,7 @@
 
     </main>
 
+<!-- This is footer Section -->
     <footer class="footer">
         <h3 class="footer-title">
             Flower<span class="shop">Shop</span>
@@ -103,7 +153,7 @@
             It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
 
         </p>
-        <small class="small">@2020-2023, FlowerShop.com. All rights reserved. </small>
+        <small class="small">&copy;2020-2023, FlowerShop.com. All rights reserved. </small>
 
     </footer>
     
