--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- This is bonus section -->
     <section class="expensive">
         <div class="expensive-title">
-            <h3 class="flowers-title">Some expensive Flowers</h3>
+            <h3 class="flowers-title">Some Expensive Flowers</h3>
             <p class="flowers-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
         </div>
         <div class="expensive-flex">
